--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -11,9 +11,8 @@
     <%= f.input :raw_data, :as  => :text, :input_html  => {:class  => "span16"} %> 
   <% end %>
 
-  <div class="actions">
+  <div class="form-actions">
     <%= f.button :submit, :class  => "primary" %>
     <%= button_tag 'Cancel', :type  => :reset, :class  => "btn" %>
-
   </div>
 <% end %>
