--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,13 +1,12 @@
-<% content_for :breadcrumb do -%>
-  <li>
-    <%= link_to "Home", root_path %>
-  	<span class="divider">/</span>
-  </li>
-  <li class="active"><%= @page.name %></li>
-<% end -%>
-
 <h1><%= @page.name %></h1>
 
 <div>
   <%= @page.data.html_safe %>
+</div>
+
+
+<div class="form-actions">
+  <%= link_to 'Edit page', edit_page_path(@page.model), :rel  => "edit-page", :class  => "btn small", :alt  => "Edit", :title  => "Edit" %>
+  <%= link_to 'Delete page', @page.model, :method  => :delete, :confirm  => "Are you sure?", :class  => "btn danger small", :alt  => "Delete" %>
+
 </div>
