--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,4 +1,11 @@
 <%= simple_form_for @page, :wrapper  => :inline do |f| %>
+  <% if f.error_notification %>
+    <div class="alert-message warning fade in" data-alert="alert">
+      <a class="close" data-dismiss="alert" href="#">×</a>
+      <p><%= f.error_notification %></p>
+    </div>
+  <% end %>
+
   <%= field_set_tag nil, :class  => "control-group" do %>
     <%= f.input :name, :label_html  => {:class  => 'control-label'} %>
   <% end %>
