--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -7,6 +7,6 @@
 
 <div class="form-actions">
   <%= link_to 'Edit page', edit_page_path(@page.model), :rel  => "edit-page", :class  => "btn small", :alt  => "Edit", :title  => "Edit" %>
-  <%= link_to 'Delete page', @page.model, :method  => :delete, :confirm  => "Are you sure?", :class  => "btn danger small", :alt  => "Delete" %>
+  <%= link_to 'Delete page', @page.model, :rel  => 'delete-page', :method  => :delete, :confirm  => "Are you sure?", :class  => "btn danger small", :alt  => "Delete" %>
 
 </div>
