--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,6 @@
+<% if params[:tag] %>
+  <h3>Pages tagged with <%= params[:tag] %></h3>
+<% end %>
 <ul>
 <% @pages.each do |page| %>
   <li><%= link_to page.name, page %></li>
