--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -20,6 +20,6 @@
 
   <div class="form-actions">
     <%= f.button :submit, :class  => "primary" %>
-    <%= button_tag 'Cancel', :type  => :reset, :class  => "btn" %>
+    <%= link_to "Cancel", url_for(:back), :class  => "btn" %>
   </div>
 <% end %>
