Display page timestamp and layout cleanup

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,18 @@ a.absent {
   text-decoration: none;
   border-bottom: 1px dashed #f30;
 }
+
+.page-metadata {
+  background-color: whiteSmoke;
+  font-size: 85%;
+  color: #555;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 7px;
+  height:13px;
+}
+
+.page-metadata div.tags {
+  font-weight: bold;
+}
+
