--- a/app/views/page_tags/index.html.erb
+++ b/app/views/page_tags/index.html.erb
@@ -1,5 +1,7 @@
-<ul>
-  <% @tags.each do |tag|  %>
-    <li><%= link_to tag.name, pages_path(:tag  => tag.name) %></li>
-  <% end %>
-</ul>
+<div class="row">
+  <ul>
+    <% @tags.each do |tag|  %>
+      <li><%= link_to tag.name, pages_path(:tag  => tag.name) %></li>
+    <% end %>
+  </ul>
+</div>
