--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kawa</title>
+  <title>川</title>
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -10,7 +10,7 @@
   <div class="navbar navbar-fixed">
     <div class="navbar-inner">
       <div class="fluid-container">
-        <a class="brand">Kawa</a>
+        <a class="brand">川</a>
         <ul class="nav">
           <li class="active"><%= link_to 'Pages', pages_path %></li>
         </ul>
