--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="navbar navbar-fixed">
+  <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="fluid-container">
         <a class="brand">川</a>
