--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row-fluid">
   <%= simple_form_for @page, :wrapper  => :bootstrap do |f| %>
     <% if f.error_notification %>
       <div class="alert alert-block alert-error fade in" data-alert="alert">
@@ -20,7 +20,7 @@
     <% end %>
 
     <div class="form-actions">
-      <%= f.button :submit, :class  => "primary" %>
+      <%= f.button :submit, :class  => "btn-primary" %>
       <%= link_to "Cancel", url_for(:back), :class  => "btn" %>
     </div>
   <% end %>
