--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to "New Quote", new_quote_path %></li>
+              <li class="divider"></li>
               <li><%= link_to "View all quotes", quotes_path %></li>
             </ul>
           </li>
