Fixed displaying quotes that do not have a source

--- a/app/views/pages/search_result.html.erb
+++ b/app/views/pages/search_result.html.erb
@@ -18,7 +18,7 @@
     </ul>
 
     <% unless @search.exact_match? %>
-      <div><%= @search.new_page_link_from_query :class  => "btn-small" %></div>
+      <div><%= @search.new_page_link_from_query :class  => "btn btn-small" %></div>
     <% end  %>
   <% end %>
 </div>
