Updated icon for github links

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -9,7 +9,7 @@ a[href^="http"] {
 }
 
 a[href*="github"] {
-  background: url(octocat.png) no-repeat right center;
+  background: url(github-favicon.ico) no-repeat right center;
   padding-right: 19px;
 }
 
