--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -1,8 +1,4 @@
-<blockquote>
-  <%= @quote.quotation %>
-  <%= @quote.attribution %>
-</blockquote>
-
+<%= @quote.quote %>
 
 <div class="quote-metadata row-fluid">
   <div class="span8">
