--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -1,11 +1,6 @@
 <div class="row-fluid">
   <%= simple_form_for @quote, :wrapper  => :bootstrap do |f| %>
-    <% if f.error_notification %>
-      <div class="alert alert-block alert-error fade in" data-alert="alert">
-        <a class="close" data-dismiss="alert" href="#">×</a>
-        <p><%= f.error_notification %></p>
-      </div>
-    <% end %>
+    <%= render :partial  => "/shared/form_error", :locals  => {:f  => f} %>
 
     <%= field_set_tag nil, :class  => "control-group" do %>
       <%= f.input :author, :label_html  => {:class  => 'control-label'} %>
