Basic bookmark support

--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-  <%= simple_form_for @link, :wrapper  => :bootstrap do |f| %>
+  <%= simple_form_for @bookmark, :wrapper  => :bootstrap do |f| %>
     <%= render :partial  => "/shared/form_error", :locals  => {:f  => f} %>
 
     <%= field_set_tag nil, :class  => "control-group" do %>
