Refactor metadata display

--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -3,3 +3,5 @@
 <%  if @bookmark.description %>
   <p><%= @bookmark.description %></p>
 <% end -%>
+
+<%= render :partial  => 'shared/metadata', :locals  => {:presenter  => @bookmark} %>
