--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -5,20 +5,8 @@
     <%= @page.data.html_safe %>
   </article>
 </div>
-<div class="page-metadata row-fluid">
-  <div class="span8">
-    <%= @page.created_at %>
-    <%= @page.updated_at %>
-  </div>
-  <div class="tags pull-right">
-    <% if @page.tags? %>
-      <i class="icon-tags"></i>
-      <% @page.tags.each_with_index do |tag, idx| %>
-        <%= link_to tag, pages_path(:tag  => tag) %><%= render_comma(@page.tags, idx) %>
-      <% end %>
-    <% end %>
-  </div>
-</div>
+
+<%= render :partial  => 'shared/metadata', :locals  => {:presenter => @page} %>
 
 <div class="form-actions row-fluid">
   <%= link_to 'Edit page', edit_page_path(@page.model), :rel  => "edit-page", :class  => "btn-info btn-small", :alt  => "Edit", :title  => "Edit" %>
