--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,15 +1,5 @@
 <% quote = QuotePresenter.new(quote) -%>
 <div class="quote fluid-row">
   <%= quote %>
-  <div class="control"> 
-    <span class="label label-info">
-      <%= link_to 'View', quote.model %>
-    </span>
-    <span class="label label-info">
-        <%= link_to 'Edit', edit_quote_path(quote.id) %>
-    </span>
-    <span class="label label-important">
-      <%= link_to 'Delete', quote.model, :rel  => 'delete-quote', :method  => :delete, :confirm  => "Are you sure?" %>
-    </span>
-  </div>
+  <%= render :partial  => "shared/control", :locals  => {:model  => quote.model, :edit_path  => edit_quote_path(quote.id)} %>
 </div>
